# wavephoenix-usb

./: README.md
.github/workflows/: build.yml
dolphin/: WavePhoenix.ini
firmware/: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  pico_sdk_import.cmake
firmware/src/: main.c  tusb_config.h  usb_descriptors.c
